src/FinancialForce Accounting/objects/AllocationFilter__c.object
<CustomObject>
    <customHelpPage>codahelpallocationfilter</customHelpPage>
    <description>Stores the queries for selecting and filtering allocation data for the allocation template.</description>
    <fields>
        <fullName>AllocationFilterStructure__c</fullName>
        <label>Allocation Filter Structure</label>
        <referenceTo>AllocationFilterStructure__c</referenceTo>
        <relationshipLabel>Allocation Filters</relationshipLabel>
        <relationshipName>FilterValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipName>Filter_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipName>Filter_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipName>Filter_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FilterCriteria__c</fullName>
        <label>Filter Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiselect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Allocation Filters</relationshipLabel>
        <relationshipName>Filter_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a local GLA and must be active.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Allocation Filters Local GLA</relationshipLabel>
        <relationshipName>AllocationFiltersLocalGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Allocation Filter</label>
    <nameField>
        <displayFormat>AF{000000}</displayFormat>
        <label>Allocation Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>